force-app/main/default/objects/OneLoginClientConfiguration__mdt/OneLoginClientConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Stores configuration settings for integrating Salesforce with OneLogin, including client credentials and endpoints needed for authentication and API communication.</description>
    <label>OneLoginClientConfiguration</label>
    <pluralLabel>OneLoginClientConfigurations</pluralLabel>
</CustomObject>