force-app/main/default/objects/OneLoginClientConfiguration__mdt/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <description>The GOV.UK One Login Client ID</description>
    <label>ClientID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>