force-app/main/default/objects/OneLoginClientConfiguration__mdt/fields/DIDUrl__c.field-meta.xml
<CustomField>
    <fullName>DIDUrl__c</fullName>
    <description>URL for DID endpoint</description>
    <label>DIDUrl</label>
    <type>Url</type>
</CustomField>