force-app/main/default/objects/OneLoginClientConfiguration__mdt/fields/DiscoveryUrl__c.field-meta.xml
<CustomField>
    <fullName>DiscoveryUrl__c</fullName>
    <defaultValue>&quot;https://oidc.integration.account.gov.uk/.well-known/openid-configuration&quot;</defaultValue>
    <description>URL for discovery endpoint</description>
    <label>DiscoveryUrl</label>
    <type>Url</type>
</CustomField>