force-app/main/default/objects/OneLoginClientConfiguration__mdt/fields/IdentityIssuer__c.field-meta.xml
<CustomField>
    <fullName>IdentityIssuer__c</fullName>
    <defaultValue>&quot;https://identity.integration.account.gov.uk/&quot;</defaultValue>
    <description>The issuer specified in the iss claim in the coreIdentityJWT</description>
    <label>IdentityIssuer</label>
    <type>Url</type>
</CustomField>