force-app/main/default/objects/OneLoginClientConfiguration__mdt/fields/PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>PrivateKey__c</fullName>
    <description>Private key for signing JWT tokens</description>
    <label>PrivateKey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>