force-app/main/default/objects/OneLoginClientConfiguration__mdt/fields/RedirectUrl__c.field-meta.xml
<CustomField>
    <fullName>RedirectUrl__c</fullName>
    <description>Redirect URL for callback after authentication</description>
    <label>RedirectUrl</label>
    <type>Url</type>
</CustomField>