force-app/main/default/objects/OneLoginClientConfiguration__mdt/fields/VectorOfTrust__c.field-meta.xml
<CustomField>
    <fullName>VectorOfTrust__c</fullName>
    <description>The vtr parameter to send in the request to the authorize endpoint</description>
    <label>VectorOfTrust</label>
    <length>255</length>
    <type>Text</type>
</CustomField>